<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.ProjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appBarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_list"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtProjectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/app_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtProjectAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/app_name"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/location"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/location"
                android:padding="5dp"
                android:src="@drawable/ic_google_map_34" />

            <EditText
                android:id="@+id/search"
                android:layout_width="150dp"
                android:layout_height="wrap_content" android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@+id/btClear"
                android:layout_toLeftOf="@+id/btClear"
                android:autofillHints="Search Block"
                android:background="@drawable/rounder_corner"
                android:hint="@string/search_block"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textSize="12sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <include layout="@layout/layout_recycler" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>